--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ header{
     width: 100%;
     z-index: 10;
     position: fixed;
-    background: url(/images/portfolio.pnghttps://github.com/JeremiahNgige/portfolio2/blob/master/images/portfolio.png);
+    background: url("/images/portfolio.pnghttps://github.com/JeremiahNgige/portfolio2/blob/master/images/portfolio.png");
 }
 #bannes{
     width: 100%;
